--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -221,7 +221,7 @@ services:
     container_name: ats-mafia-websocket
     hostname: ats-websocket
     
-    command: python -m ats_mafia_framework.api.websocket_server
+    command: uvicorn ats_mafia_framework.api.websocket_server:app --host 0.0.0.0 --port 8080 --reload
     
     ports:
       - "8080:8080"  # WebSocket server
