--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ colorama>=0.4.4
 aiohttp>=3.7.0
 websockets>=9.0
 # Container management
-docker>=6.0.0
+docker>=6.1.3,<7.0
 
 
 # Security and cryptography
