--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -301,7 +301,7 @@ services:
     container_name: ats-mafia-ui
     hostname: ats-ui
     
-    command: streamlit run /app/ats_mafia_framework/ui/personal_assistant_ui.py --server.port 8501 --server.address 0.0.0.0
+    command: sh -c "cd /app/ats_mafia_framework/ui && python -m http.server 8501 --bind 0.0.0.0"
     
     ports:
       - "8501:8501"  # Streamlit UI
@@ -345,11 +345,11 @@ services:
       - ats-mafia-websocket
     
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8501/_stcore/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8501/index.html"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
+      start_period: 20s
     
     restart: unless-stopped
     
