Docker IP variable added.

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,16 @@
 # This file contains ALL configuration variables for the entire framework,
 # including core settings, features, integrations, and deployment options.
 # ============================================================================
+# ============================================================================
+# DOCKER HOST CONFIGURATION (for network-accessible UI)
+# ============================================================================
+# Set this to your Docker host's IP address for UI served from :8501 to reach API on :8000
+# Examples:
+#   - Local machine: DOCKER_HOST_IP=192.168.1.100
+#   - Server: DOCKER_HOST_IP=10.0.0.50
+#   - Leave unset for container-to-container networking (default)
+DOCKER_HOST_IP=
+
 
 # ============================================================================
 # FRAMEWORK CORE SETTINGS
