ui and websocket server updates

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,16 @@
 #   - Leave unset for container-to-container networking (default)
 DOCKER_HOST_IP=
 
+# ============================================================================
+# UI BRANDING & ASSETS
+# ============================================================================
+# Custom favicon and logo paths (relative to ui/ directory)
+# Replace the placeholder favicon.ico with your actual favicon file
+UI_FAVICON_PATH=favicon.ico
+UI_LOGO_PATH=assets/images/logo.png
+UI_BRAND_NAME=ATS MAFIA
+UI_BRAND_TAGLINE=Advanced Training Simulation
+
 
 # ============================================================================
 # FRAMEWORK CORE SETTINGS
